--- a/css/index.less
+++ b/css/index.less
@@ -7,19 +7,44 @@
   margin:0 auto;
 }
 .list-box{
+  padding:10px;
+  margin-top: 20px;
+  border:1px solid #d7d7d7;
   .item{
-    padding: 10px;
-    border:1px solid blue;
+    padding: 5px;
+    border:1px solid #d9d9d9;
     margin-right: 10px;
     font-size: 15px;
     display: inline-block;
     cursor: pointer;
     &.active{
-      border-color: red;
+      background: #dddddd;
+      border-color: #d9d9d9;
     }
   }
 }
-
+.operate{
+  font-size: 15px;
+  margin-top: 10px;
+  vertical-align: middle;
+  line-height: 30px;
+  input{
+    margin-left: 10px;
+    width: 50px;
+    padding: 3px;
+  }
+  .btn{
+    margin-left: 20px;
+    display: inline-block;
+    padding:0 5px;
+    border:1px solid #9b9b9b;
+    border-radius: 3px;
+    cursor: pointer;
+    &:hover{
+      background: #ebebeb;
+    }
+  }
+}
 #video-wrapper {
   width: 10px;
   height: 10px;
