--- a/src/scss/index.less
+++ b/src/scss/index.less
@@ -15,6 +15,20 @@
       margin-left: 20px;
     }
   }
+  .status{
+    display: flex;
+    height: 15px;
+    border: 1px solid black;
+    div{
+      flex-grow:1;
+    } 
+    .load{
+      background-color: blue;
+    }
+    .append{
+      background-color: green;
+    }
+  }
   .list-box{
     height: 500px;
     overflow-y: auto;
