--- a/src/scss/index.less
+++ b/src/scss/index.less
@@ -3,17 +3,8 @@
     padding: 0;
   }
   .wrap{
-    width: 1000px;
+    width: 700px;
     margin:0 auto;
-  
-    .left,.right{
-      display: inline-block;
-      vertical-align: top;
-    }
-  
-    .right{
-      margin-left: 20px;
-    }
   }
   .status{
     display: flex;
@@ -29,35 +20,22 @@
       background-color: green;
     }
   }
-  .list-box{
-    height: 500px;
-    overflow-y: auto;
-    width: 120px;
-    padding:10px;
-    margin-top: 20px;
-    border:1px solid #d7d7d7;
-    padding:3px;
-    .item{
-      padding: 5px;
-      border:1px solid #d9d9d9;
-      margin-bottom: 3px;
-      font-size: 15px;
-      cursor: pointer;
-      &.active{
-        background: #dddddd;
-        border-color: #d9d9d9;
-      }
-    }
+  .desc{
+    font-size: 5px;
+    color: #9b9b9b;
   }
+
   .operate{
     font-size: 15px;
-    margin-top: 10px;
+    margin-top: 4px;
     vertical-align: middle;
     line-height: 30px;
     input{
-      margin-left: 10px;
-      width: 50px;
+      margin-left: 5px;
       padding: 3px;
+    }
+    .input-url{
+      width: 500px;
     }
     .btn{
       margin-left: 20px;
