--- a/src/scss/index.less
+++ b/src/scss/index.less
@@ -69,9 +69,8 @@
   margin: 20px auto;
   width: 500px;
   height: 400px;
-}
-
-#video-wrapper video {
-  width: 500px;
-  height: 400px;
+  video {
+    width: 500px;
+    height: 400px;
+  }
 }
