--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -8,6 +8,11 @@
   margin: 0 auto;
 }
 
+.title{
+  font-size: 30px;
+  text-align: center;
+  margin: 30px;
+}
 .status {
   display: flex;
   height: 15px;
