--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -16,15 +16,14 @@
 .status {
   display: flex;
   height: 15px;
-  border: 1px solid black;
-  box-sizing: border-box;
 
   div {
     flex-grow: 1;
+    background: #9b9b9b;
   }
 
   .load {
-    background-color: gray;
+    background-color: rgb(73, 226, 224);
   }
 
   .loaded {
@@ -46,6 +45,25 @@
   margin-top: 4px;
   vertical-align: middle;
   line-height: 30px;
+
+  .color-box{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: #9b9b9b;
+    margin-right: 5px;
+    &.load {
+      background-color: rgb(73, 226, 224);
+    }
+  
+    &.loaded {
+      background-color: blue;
+    }
+  
+    &.append {
+      background-color: green;
+    }
+  }
 
   input {
     margin-left: 5px;
