--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -2,7 +2,13 @@
   margin: 0;
   padding: 0;
 }
-
+body{
+  background-color: #e6f0fc;
+}
+input:focus {
+  outline: none;
+  border: none;
+}
 .wrap {
   width: 700px;
   margin: 0 auto;
@@ -11,7 +17,55 @@
 .title{
   font-size: 30px;
   text-align: center;
-  margin: 30px;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+  width: 318px;
+  .t1{
+    background-image: linear-gradient(to right, #4fedca, #3da4f1);
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+  .t2{
+    background-image: linear-gradient(to right, #3da4f1, #c9b8fe);
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+}
+.search{
+  display: flex;
+  height: 30px;
+  justify-content: space-between;
+  align-items: baseline;
+  border: 1px solid transparent;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box;
+  padding: 3px 0 3px 16px;
+  background-image: linear-gradient(to right, #fff, #fff), linear-gradient(90deg, #4fe7ce, #585aed);
+  .input-url{
+    border:none;
+    display: block;
+    flex-grow: 1;
+    color:#9ca8b8;
+    font-size: 17px;
+    height: 20px;
+    line-height: 20px;
+  }
+  .btn{
+    margin-top: -4px;
+    width: 118px;
+    margin-right: -5px;
+    background: #585aed;
+    color: white;
+    text-align: center;
+    height: 38px;
+    line-height: 38px;
+    border-radius: 0 5px 5px 0;
+    display: block;
+    cursor: pointer;
+  }
 }
 .status {
   display: flex;
@@ -39,19 +93,72 @@
   font-size: 15px;
   color: #9b9b9b;
 }
+.setting{
+  display: flex;
+  flex-wrap:  wrap;
+  justify-content: space-around;
+  margin:20px 0;
+}
+
+.item-input{
+  width: 250px;
+  display: flex;
+  height: 25px;
+  justify-content: space-between;
+  border: 1px solid transparent;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box;
+  padding: 3px 0;
+  background-image: linear-gradient(to right, #fff, #fff), linear-gradient(90deg, #4fe7ce, #585aed);
+  input{
+    text-align: center;
+    border:none;
+    width: 30px;
+    display: block;
+    flex-grow: 1;
+    color:#9ca8b8;
+    font-size: 17px;
+    height: 20px;
+    line-height: 20px;
+  }
+  .text{
+    margin-top: -4px;
+    margin-left: -1px;
+    width: 118px;
+    background: #585aed;
+    color: white;
+    text-align: center;
+    height: 33px;
+    line-height: 33px;
+    border-radius: 5px 0 0 5px;
+    display: block;
+    cursor: pointer;
+  }
+}
 
 .operate {
   font-size: 15px;
-  margin-top: 4px;
+  margin:10px 0 ;
   vertical-align: middle;
   line-height: 30px;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+
+  .status{
+    background: #dcdcdc;
+    border-radius: 3px;
+  }
 
   .color-box{
     display: inline-block;
     width: 10px;
     height: 10px;
-    background: #9b9b9b;
+    background: #dcdcdc;
     margin-right: 5px;
+
     &.load {
       background-color: rgb(73, 226, 224);
     }
@@ -87,13 +194,111 @@
     }
   }
 }
+.mbox-wrap{
+  display: flex;
+  justify-content: space-around;
+  .mbox{
+    width: 60px;
+    position: relative;
+    /* 第一种实现方式  */
+
+    &.load{
+      .spinner{
+        box-shadow: inset 0 0 0 .1em #f9f1e6;
+        .spinner-progress:before {
+          box-shadow: inset 0 0 0 0.1em #ffcb47;
+        }
+        .spinner-progress::after {
+          box-shadow: inset 0 0 0 0.1em #ffcb47;
+        }
+      }
+    }
+
+    &.loaded{
+      .spinner{
+        box-shadow: inset 0 0 0 .1em #edeaff;
+        .spinner-progress:before {
+          box-shadow: inset 0 0 0 0.1em #a58dff;
+        }
+        .spinner-progress::after {
+          box-shadow: inset 0 0 0 0.1em #a58dff;
+        }
+      }
+    }
+    &.append{
+      .spinner{
+        box-shadow: inset 0 0 0 .1em #ebf7f7;
+        .spinner-progress:before {
+          box-shadow: inset 0 0 0 0.1em #48d1ca;
+        }
+        .spinner-progress::after {
+          box-shadow: inset 0 0 0 0.1em #48d1ca;
+        }
+      }
+    }
+
+
+    .spinner {
+      position: relative;
+      width: 1em;
+      height: 1em;
+      font-size: 60px;
+      border-radius: 50%;
+      box-shadow: inset 0 0 0 .1em #dbe6f8;
+      .spinner-progress {
+        position: absolute;
+        width: 1em;
+        height: 1em;
+      }
+      .spinner-progress:before {
+        position: absolute;
+        z-index: 2;
+        clip: rect(0, 1em, 1em, 0.5em);
+        width: 1em;
+        height: 1em;
+        content: '';
+        box-shadow: inset 0 0 0 0.1em #6a93ff;
+        border-radius: 50%;
+        transform: rotate(90deg);
+      }
+      .spinner-progress:after {
+        position: absolute;
+        clip: rect(0, 1em, 1em, 0.5em);
+        width: 1em;
+        height: 1em;
+        content: '';
+        animation: spinner-circle 5s ease-in-out infinite;
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 0.1em #6a93ff;
+      }
+    }
+    .num{
+      position: absolute;
+      top: 15px;
+      width: 60px;
+      z-index: 10;
+      text-align: center;
+    }
+  
+    .text{
+      color: #9ea7b8;
+      text-align: center;
+      font-size: 15px;
+    }
+  }
+}
+
+
+
+
+
 
 #video-wrapper {
-  margin: 20px auto;
-  width: 500px;
+  margin: 0 auto;
   height: 400px;
   video {
-    width: 500px;
+    width: 100%;
     height: 400px;
+    border-radius: 5px;
   }
 }
