--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -5,6 +5,9 @@
 body{
   background-color: #e6f0fc;
 }
+div{
+  user-select: none;
+}
 input:focus {
   outline: none;
   border: none;
@@ -67,27 +70,7 @@ input:focus {
     cursor: pointer;
   }
 }
-.status {
-  display: flex;
-  height: 15px;
 
-  div {
-    flex-grow: 1;
-    background: #9b9b9b;
-  }
-
-  .load {
-    background-color: rgb(73, 226, 224);
-  }
-
-  .loaded {
-    background-color: blue;
-  }
-
-  .append {
-    background-color: green;
-  }
-}
 
 .desc {
   font-size: 15px;
@@ -147,40 +130,10 @@ input:focus {
   border-radius: 5px;
   padding: 10px;
 
-  .status{
-    background: #dcdcdc;
-    border-radius: 3px;
-  }
-
-  .color-box{
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background: #dcdcdc;
-    margin-right: 5px;
-
-    &.load {
-      background-color: rgb(73, 226, 224);
-    }
-  
-    &.loaded {
-      background-color: blue;
-    }
-  
-    &.append {
-      background-color: green;
-    }
-  }
-
   input {
     margin-left: 5px;
     padding: 3px;
   }
-
-  .input-url {
-    width: 500px;
-  }
-
   .btn {
     margin-left: 20px;
     display: inline-block;
@@ -200,28 +153,33 @@ input:focus {
   .mbox{
     width: 60px;
     position: relative;
-    /* 第一种实现方式  */
+
+    .spinner.red{
+      box-shadow: inset 0 0 0 .1em #eca23b;
+    }
+    
+    &.all{
+      .spinner{
+        box-shadow: inset 0 0 0 .1em #dcdcdc;
+      }
+    }
 
     &.load{
       .spinner{
-        box-shadow: inset 0 0 0 .1em #f9f1e6;
-        .spinner-progress:before {
-          box-shadow: inset 0 0 0 0.1em #ffcb47;
-        }
-        .spinner-progress::after {
-          box-shadow: inset 0 0 0 0.1em #ffcb47;
-        }
+        box-shadow: inset 0 0 0 .1em #ffcb47;
       }
     }
 
     &.loaded{
       .spinner{
         box-shadow: inset 0 0 0 .1em #edeaff;
-        .spinner-progress:before {
-          box-shadow: inset 0 0 0 0.1em #a58dff;
+        .spinner-progress::before {
+          box-shadow: inset 0 0 0 0.1em var(--loaded-left-color);
+          transform: var(--loaded-left);
         }
         .spinner-progress::after {
           box-shadow: inset 0 0 0 0.1em #a58dff;
+          transform: var(--loaded-right);
         }
       }
     }
@@ -229,10 +187,12 @@ input:focus {
       .spinner{
         box-shadow: inset 0 0 0 .1em #ebf7f7;
         .spinner-progress:before {
-          box-shadow: inset 0 0 0 0.1em #48d1ca;
+          box-shadow: inset 0 0 0 0.1em var(--append-left-color);
+          transform: var(--append-left);
         }
         .spinner-progress::after {
           box-shadow: inset 0 0 0 0.1em #48d1ca;
+          transform: var(--append-right);
         }
       }
     }
@@ -289,7 +249,28 @@ input:focus {
 }
 
 
+.status {
+  display: flex;
+  height: 15px;
+  background: #dcdcdc;
+  border-radius: 3px;
+  div {
+    flex-grow: 1;
+    background: #9b9b9b;
+  }
 
+  .load {
+    background-color: #ffcb47;
+  }
+
+  .loaded {
+    background-color: #a58dff;
+  }
+
+  .append {
+    background-color: #48d1ca;
+  }
+}
 
 
 
