--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -58,7 +58,7 @@ input:focus {
   }
   .btn{
     margin-top: -4px;
-    width: 118px;
+    width: 132px;
     margin-right: -5px;
     background: #585aed;
     color: white;
@@ -68,6 +68,10 @@ input:focus {
     border-radius: 0 5px 5px 0;
     display: block;
     cursor: pointer;
+    img{
+      width: 22px;
+      vertical-align: text-bottom;
+    }
   }
 }
 
