--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -209,31 +209,37 @@ input:focus {
       font-size: 60px;
       border-radius: 50%;
       box-shadow: inset 0 0 0 .1em #dbe6f8;
+      .mask{
+        position: absolute;
+        width: 0.5em;
+        height: 1em;
+        z-index: 1;
+        background-color: white;
+      }
       .spinner-progress {
         position: absolute;
         width: 1em;
         height: 1em;
-      }
-      .spinner-progress:before {
-        position: absolute;
-        z-index: 2;
-        clip: rect(0, 1em, 1em, 0.5em);
-        width: 1em;
-        height: 1em;
-        content: '';
-        box-shadow: inset 0 0 0 0.1em #6a93ff;
-        border-radius: 50%;
-        transform: rotate(90deg);
-      }
-      .spinner-progress:after {
-        position: absolute;
-        clip: rect(0, 1em, 1em, 0.5em);
-        width: 1em;
-        height: 1em;
-        content: '';
-        animation: spinner-circle 5s ease-in-out infinite;
-        border-radius: 50%;
-        box-shadow: inset 0 0 0 0.1em #6a93ff;
+        &:before {
+          position: absolute;
+          z-index: 2;
+          clip: rect(0, 1em, 1em, 0.5em);
+          width: 1em;
+          height: 1em;
+          content: '';
+          animation: spinner-circle 5s ease-in-out infinite;
+          border-radius: 50%;
+          transform: rotate(90deg);
+        }
+        &:after {
+          position: absolute;
+          clip: rect(0, 1em, 1em, 0.5em);
+          width: 1em;
+          height: 1em;
+          content: '';
+          animation: spinner-circle 5s ease-in-out infinite;
+          border-radius: 50%;
+        }
       }
     }
     .num{
@@ -260,7 +266,7 @@ input:focus {
   border-radius: 3px;
   div {
     flex-grow: 1;
-    background: #9b9b9b;
+
   }
 
   .load {
