--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -262,7 +262,7 @@ input:focus {
 .status {
   display: flex;
   height: 15px;
-  background: #dcdcdc;
+  // background: #dcdcdc;
   border-radius: 3px;
   div {
     flex-grow: 1;
