--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -268,7 +268,9 @@ input:focus {
     flex-grow: 1;
 
   }
-
+  .init {
+    background-color: #dcdcdc;
+  }
   .load {
     background-color: #ffcb47;
   }
