--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -123,6 +123,13 @@ input:focus {
     display: block;
     cursor: pointer;
   }
+  .obj{
+    flex-grow: 1;
+    display: flex;
+    align-items: center; /* 垂直居中 */
+    justify-content: center; /* 水平居中 */
+    text-align: center;
+  }
 }
 
 .operate {
