自动跳过错误

--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -282,13 +282,15 @@ input:focus {
     background-color: #ffcb47;
   }
 
-  .loaded {
-    background-color: #a58dff;
-  }
-
   .append {
     background-color: #48d1ca;
   }
+
+  .error {
+    background-color: #f71e1e;
+  }
+
+  
 }
 
 
