--- a/player/src/scss/index.less
+++ b/player/src/scss/index.less
@@ -268,9 +268,13 @@ input:focus {
 
 .status {
   display: flex;
-  height: 15px;
-  // background: #dcdcdc;
+  height: 3px;
+  position: relative;
   border-radius: 3px;
+  width: 670px;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top: -15px;
   div {
     flex-grow: 1;
 
